<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:text="@string/meal_suggestion_app"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/promptTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/enter_the_time_of_day_morning_mid_morning_afternoon_mid_afternoon_dinner_after_dinner"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <EditText
        android:id="@+id/timeInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/e_g_morning"
        android:textColor="@color/white"
        android:inputType="text"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/promptTextView"
        app:layout_constraintVertical_bias="0.029" />

    <Button
        android:id="@+id/suggestMealButton"
        android:layout_width="300dp"
        android:layout_height="118dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="8dp"
        android:text="@string/suggest_meal"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@id/resetButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeInputEditText"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="300dp"
        android:layout_height="116dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        android:text="@string/reset"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/suggestMealButton"
        app:layout_constraintTop_toBottomOf="@id/timeInputEditText"
        tools:ignore="VisualLintButtonSize" />

    <androidx.cardview.widget.CardView
        android:id="@+id/suggestionCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeInputEditText">

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/mealSuggestionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="120dp"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786"
        tools:text="Your meal suggestion will appear here" />

</androidx.constraintlayout.widget.ConstraintLayout>

